[package]
name = "chameleon_db_client"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of a target is the name of the library that will be generated. This
# is defaulted to the name of the package, with any dashes replaced
# with underscores. (Rust `extern crate` declarations reference this name;
# therefore the value must be a valid Rust identifier to be usable.)
name = "chameleon_db_client"

# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib/lib.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"

[dependencies]
reqwest = "0.9.20"